app/assets/stylesheets/email.sass
@import 'zurb-ink'

body
  background-color: #ededed
  font-family: sans-serif

  .content
    width: 580px
    margin: 0px auto
    border-radius: 5px
    overflow: hidden
    border-collapse: collapse

  .upper-small-text
    font-size: 10px
    color: #b2b2b2
    padding-top: 10px
    padding-bottom: 30px

    &.view-in-browser
      text-align: right

  .logo-container
    padding-bottom: 25px
    padding-top: 15px

  .top-block-small
    background-color: #257fcd
    height: 100px

    td
      vertical-align: middle

    &, &>table
      border-top-right-radius: 5px
      border-top-left-radius: 5px

    .title
      color: white
      font-weight: bold
      font-size: 28px
      margin-left: 20px
      vertical-align: middle
      padding: 0px

  .centered-image
    margin: 0px auto
    float: none

  .top-block
    background-color: #257fcd
    border-top-right-radius: 5px
    border-top-left-radius: 5px
    height: 265px

    img
      padding-top: 20px
      padding-bottom: 30px

    .you-invited
      color: white
      font-weight: bold
      font-size: 32px
      width: 320px
      text-align: center
      margin-bottom: 30px
      margin: 0px auto

  .image-block
    padding-top: 15px
    background-color: white

  .bottom-block
    background-color: white
    border-bottom-right-radius: 5px
    border-bottom-left-radius: 5px
    height: 250px
    color: #434343

    p
      padding: 10px 10px

    center
      padding-top: 15px
      color: #434343

      .avatar
        margin: 0px auto
        float: none
        width: 65px
        height: 65px
        border-radius: 50%
        overflow: hidden

      h2.notification
        text-align: center
        font-family: arial
        font-size: 32px
        color: #333

    .message
      color: black
      font-size: 18px
      width: 300px
      text-align: center
      margin-top: 30px
      margin-bottom: 30px

    .trial-expire-message
      width: 70%!important

      a
        text-decoration: none
        color: #378aca

    .ready-to-get-started
      color: black
      font-size: 20px
      width: 300px
      text-align: center
      margin: 50px auto 30px

    .blue-border-button
      height: 34px
      color: #378aca
      font-weight: bold
      font-size: 20px
      text-decoration: none
      width: 220px
      border-radius: 24px
      margin-bottom: 30px
      display: block
      border: 2px solid #378aca
      padding-top: 10px

    .get-started-button
      height: 48px
      background-color: #62cf14
      color: white
      font-weight: bold
      font-size: 20px
      text-decoration: none
      width: 220px
      border-radius: 24px
      margin-bottom: 30px
      display: block
      margin: auto

      .phrase
        margin-top: 14px
        font-size: 18px
        float: left
        margin-left: 30px

      img
        float: right
        margin-right: 36px
        margin-top: 17px

    .green-button
      height: 48px
      line-height: 48px
      background-color: #62cf14
      color: white
      font-weight: bold
      font-size: 17px
      text-decoration: none
      width: 220px
      border-radius: 24px
      margin-bottom: 30px
      display: block

    .long
      width: 340px

  .welcome-block
    padding: 30px
    p
      text-align: justify
      color: #434343
      font-weight: 15px

  .bottom-text
    margin-top: 50px
    font-size: 12px
    color: #b2b2b2

    // for google
    span
      color: #b2b2b2
    p
      span
        color: #b2b2b2

    a
      color: #3a89ce
      text-decoration: none

